# FeatureNet_Pytorch

./: .gitignore  FN_param.yaml  FN_param1.yaml  FeatureNet_Pytoarch_Replication.ipynb  README.md  pyproject.toml
dataset/vox_filelist/: FN_0.01_test.txt  FN_0.01_train.txt  FN_0.01_val.txt  FN_0.02_test.txt  FN_0.02_train.txt  FN_0.02_val.txt  FN_0.05_test.txt  FN_0.05_train.txt  FN_0.05_val.txt  FN_0.10_test.txt  FN_0.10_train.txt  FN_0.10_val.txt  FN_0.20_test.txt  FN_0.20_train.txt  FN_0.20_val.txt  FN_0.50_test.txt  FN_0.50_train.txt  FN_0.50_val.txt  FN_1.00_test.txt  FN_1.00_train.txt  FN_1.00_val.txt
